--- a/Areas/Demo/Pages/Home/Main.cshtml
+++ b/Areas/Demo/Pages/Home/Main.cshtml
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <h3 class=card-title>Create a Sales Order</h3>
                 <p class="card-text">The following demo shows how to create a sales order using ReST Open APIs.</p>
-                <p class="card-footer bg-transparent border-0"><a class="btn btn-primary btn-lg" asp-route-id="1" asp-area="Demo" asp-page=/SalesOrders/Details>Get Sales Orders &raquo;</a></p>
+                <p class="card-footer bg-transparent border-0"><a class="btn btn-primary btn-lg" asp-route-id="1" asp-area="Demo" asp-page=../SalesOrders/Details>Get Sales Orders &raquo;</a></p>
             </div>
         </div>
     </div>  
