--- a/Areas/Demo/Pages/SalesOrders/Details.cshtml
+++ b/Areas/Demo/Pages/SalesOrders/Details.cshtml
@@ -10,10 +10,8 @@
 <div>
     <h4>SalesOrder</h4>
     <hr />
-    <dl class="row">
-    </dl>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.SalesOrder.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+<form method="post">
+    <h1>Enter an Sales Order</h1>
+    <button type="submit" class="btn btn-primary btn-lg" />
+</form>
